--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SimpleLife</title>
+    <title>SIMPLE LIFEのすすめ</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700,900&display=swap" rel="stylesheet">
   </head>
 
-  <body>
+
+  <header class="header">
+      <div class="inner">
+        <div class="nav">
+          <div class="nav__left">
+         
+          <%# <% if user_signed_in? %> 
+            <div class="nav__right">                             
+              <%= link_to "ログアウト", class: :nav__logout %>
+              <%= link_to "", class: :nav__btn %>
+             </div> 
+          <%# <% else %> 
+           <%# // ログインしているときは上記を表示するようにしましょう %>
+           <%# ログインしていないときは以下を表示するようにしましょう %>
+            <div class="nav__right">
+              <%= link_to "ログイン",  class: :nav__btn %>
+              <%= link_to "新規登録",  class: :nav__btn %>
+            </div>
+          <%# // ログインしていないときは上記を表示するようにしましょう %>
+        </div>
+         <%# <% end %> 
+      </div>
+    </header>
+    
     <%= yield %>
   </body>
 </html>
