--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,29 +11,14 @@
   </head>
 
 
-  <header class="header">
-      <div class="inner">
-        <div class="nav">
-          <div class="nav__left">
-         
-          <%# <% if user_signed_in? %> 
-            <div class="nav__right">                             
-              <%= link_to "ログアウト", class: :nav__logout %>
-              <%= link_to "", class: :nav__btn %>
-             </div> 
-          <%# <% else %> 
-           <%# // ログインしているときは上記を表示するようにしましょう %>
-           <%# ログインしていないときは以下を表示するようにしましょう %>
-            <div class="nav__right">
-              <%= link_to "ログイン",  class: :nav__btn %>
-              <%= link_to "新規登録",  class: :nav__btn %>
-            </div>
-          <%# // ログインしていないときは上記を表示するようにしましょう %>
-        </div>
-         <%# <% end %> 
-      </div>
+  
     </header>
     
     <%= yield %>
+     <footer>
+      <p>
+        Copyright simple life 2021.
+      </p>
+    </footer>
   </body>
 </html>
