--- a/app/views/simples/index.html.erb
+++ b/app/views/simples/index.html.erb
@@ -28,11 +28,16 @@
     but hey, it's pure CSS magic.
     -->
     <ul id="menu">
-      <a href="#"><li>Home</li></a>
-      <a href="#"><li>About</li></a>
-      <a href="#"><li>Info</li></a>
-      <a href="#"><li>Contact</li></a>
-      <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
+     <% if user_signed_in? %>
+      <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
+        <li><%= link_to 'Log Out',  destroy_user_session_path, method: :delete, class: "logout" %></li> 
+        <% else %>
+     <li><%= link_to 'Log In',new_user_session_path  , class: "login" %></li>
+     <li><%= link_to 'Sign Up', new_user_registration_path, class: "sign-up" %></li>
+      <% end %>
+      <a href="#"><li>What’s New</li></a>
+     <li><%= link_to 'Blogs',new_simple_path , class: "login" %></li>
+      <a href=""><li>Links</li></a>
     </ul>
   </div>
 </nav>
@@ -40,7 +45,7 @@
 
   <div class="text">
     <p>full screen video !</p>
-    <p class="headline">Simple LIFe</p>
+    <p class="headline">Simple LIFe??</p>
   </div>
   
   <%= video_tag("/videos/record.mp4", autoplay: :true, loop: :true,  muted: :true ) %> 
@@ -48,5 +53,37 @@
 </div>
 
 
+ <ul class='item-lists'>
 
- 
+   <%# <% if  @items.present? %>  %>
+     <%# <% @items.each do |item| %> %>
+      <li class='list'>
+        <%# <%= link_to item_path(item) do %> %>
+        <div class='item-img-content'>
+          <%# <%= image_tag , class: "item-img" %> %>
+
+          <%# <% if item.order %>  %>
+          <div class='sold-out'>
+           <span>Sold Out!!</span> 
+          </div> 
+           <%# <%  end %>  %>
+
+        </div>
+        <div class='item-info'>
+          <h3 class='item-name'>
+            <%# <%= .title %> %>
+          </h3>
+          <div class='item-price'>
+            <%# <span><%= .price%>円<br>
+            <%# <%= .shipping.name %></span> %> %>
+            <div class='star-btn'>
+            
+              <span class='star-count'>0</span>
+            </div>
+          </div>
+        </div>
+         <%# <% end %> %>
+        </li>
+     
+
+ </ul>
