--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -53,7 +53,7 @@
    padding: 0;
    
    /* make it look decent enough */
-   background: #ebeced;
+   background: #ebeced(181, 171, 171);
    color: #cdcdcd;
    font-family: "Avenir Next", "Avenir", sans-serif;
  }
