--- a/app/views/simples/index.html.erb
+++ b/app/views/simples/index.html.erb
@@ -52,6 +52,38 @@
 
 </div>
 <%# 動画部分 %>
+
+
+
+
+<section id="index_messageBox">
+<div class="messageBox">
+<p class="message"> 
+<br>
+  英語圏ではハイタッチのことを「ハイファイブ」と言います。お客さまと二人三脚で進める家づくり。最後は笑顔でハイファイブできるように･･･そんな願いを社名に込めました。
+<br>
+<br>
+ヒアリングも設計も施工管理も、マイホームが完成するまでの間ずっと私たちが責任を持って対応します。品質を保つため、1年間に手がけるのは8棟まで。それ以上は建てません。
+<br>
+<br>
+重視するのは、暮らしやすさと美しいデザインの共存。住むほどに愛着が深まる家を、私たちと一緒につくりませんか？
+</p>
+</div>
+<div class="illustBox">
+<%# <%= image_tag "hana.jpg", class: "item-img" %>
+<%# <%= image_tag "chair.png", class: "item-img" %>
+</div>
+<div class="copyBox">
+
+</div>
+</section>
+
+
+
+
+</div>
+
+
  <div class='item-contents'>
     <h2 class='title'></h2>
     <%= link_to 'What’s New', "", class: "subtitle" %>
