--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -3,7 +3,7 @@
 
 
 .items-sell-contents {
-  background-color: #ebeced;
+  /* background-color: #ebeced; */
   font-family:  "Avenir Next", "Avenir", sans-serif;
   font-size: 20px;
   display: flex;
