--- a/app/views/simples/show.html.erb
+++ b/app/views/simples/show.html.erb
@@ -21,9 +21,9 @@
     </div>
   
     <% if current_user %>
-      <%= link_to "編集","", method: :get, class: "item-red-btn" %>
+      <%= link_to "Edit","", method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
-      <%= link_to "削除","", class:"item-destroy" %>
+      <%= link_to "Delete,", class:"item-destroy" %>
 
      
       <% end %>
