--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -226,3 +226,43 @@
  letter-spacing: 0.2px;
  font-feature-settings: "palt";
   }
+ 
+   
+
+  .main{
+    height: 300px;
+    width: 100%;
+    background-color:white;
+    
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+   }
+   
+   .left-content {
+    width: 300px;
+    height: 300px;
+    border: 20px
+   }
+   .left-image{
+    width: 300px;
+    height: 300px;
+    justify-content: space-around;
+    align-items: center;
+   }
+   
+   
+   .center-content{
+    width: 300px;
+    height: 300px;
+    
+   }
+   
+   .right-content{
+    width: 300px;
+    height: 300px;
+   
+   }
+   .subtitle{
+     color: black;
+   }
