--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -2,7 +2,7 @@
   width: 980px;
   margin: 60px auto;
   padding: 60px;
-  background-color: #cbc5c1;
+  background-color: #e7e3e1;
   border: 1px solid #ddd;
   border-radius: 5px;
 }
