--- a/app/assets/stylesheets/shared/show.css
+++ b/app/assets/stylesheets/shared/show.css
@@ -167,8 +167,8 @@
 
 .comment-btn {
   line-height: 48px;
-  background-color: #3CCACE;
-  border: 1px solid #3CCACE;
+  background-color: #4c586f;
+  border: 1px solid #4c586f;
   color: #fff;
   width: 50%;
   min-width: 150px;
