--- a/app/views/simples/show.html.erb
+++ b/app/views/simples/show.html.erb
@@ -20,15 +20,26 @@
       <span><%= @simple.sentense%></span>
     </div>
   
-    <% if current_user %>
-      <%= link_to "Edit","", method: :get, class: "item-red-btn" %>
-      <p class="or-text">or</p>
-      <%= link_to "Delete,", class:"item-destroy" %>
+    <%# <% if current_user %>
+      <%# <%= link_to "Edit","", method: :get, class: "item-red-btn" %> 
+      <%# <p class="or-text">or</p> %>
+      <%# <%= link_to "Delete,", class:"item-destroy" %> 
 
      
-      <% end %>
+      <%# <% end %> 
 
- 
+  <div class="comment-box">
+    <form>
+      <textarea class="comment-text"></textarea>
+      <p class="comment-warn">
+       
+      </p>
+      <button type="submit" class="comment-btn">
+        <%# <%= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25"%> 
+        <span>Comment<span>
+      </button>
+    </form>
+  </div>
   
  
 </div>
