--- a/app/views/simples/show.html.erb
+++ b/app/views/simples/show.html.erb
@@ -28,19 +28,25 @@
      
       <%# <% end %> 
 
-  <div class="comment-box">
-    <form>
-      <textarea class="comment-text"></textarea>
-      <p class="comment-warn">
-       
-      </p>
-      <button type="submit" class="comment-btn">
-        <%# <%= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25"%> 
-        <span>Comment<span>
-      </button>
-    </form>
+ <div class="container">
+    <% if user_signed_in? %>
+      <%= form_with(model: [@simple, @comment], local: true) do |form| %>
+        <%= form.text_area :text, placeholder: "コメントする", rows: "2" %>
+        <%= form.submit "SEND" %>
+      <% end %>
+    <% else %>
+     
+    <% end %>
   </div>
-  
+   <div class="comments">
+      <h4>＜コメント一覧＞</h4>
+      <% @comments.each do |comment| %>
+        <p>
+          <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
+          <%= comment.text %>
+        </p>
+      <% end %>
+    </div>
  
 </div>
 
