--- a/app/views/simples/index.html.erb
+++ b/app/views/simples/index.html.erb
@@ -136,7 +136,7 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-           <%= link_to 'マインド', "", class: "left-image" %>
+           <%= link_to  'マインド','/simples/category/2', class: "left-image" %>
           </h3>
           <div class='item-price'>
             <div class='star-btn'>
