--- a/app/views/simples/index.html.erb
+++ b/app/views/simples/index.html.erb
@@ -146,7 +146,7 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-           <%= link_to 'ライフスタイル', "", class: "subtitle" %>
+           <%= link_to 'ライフスタイル','/simples/category/3', class: "subtitle" %>
           </h3>
           <div class='item-price'>
            
@@ -162,7 +162,7 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-           <%= link_to '本', "", class: "subtitle" %>
+           <%= link_to '本', '/simples/category/4', class: "subtitle" %>
           </h3>
           <div class='item-price'>
            
@@ -179,7 +179,7 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-           <%= link_to 'インテリア・家電', "", class: "subtitle" %>
+           <%= link_to 'インテリア・家電', '/simples/category/5', class: "subtitle" %>
           </h3>
           <div class='item-price'>
             
@@ -196,7 +196,7 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-           <%= link_to '音楽', "", class: "subtitle" %>
+           <%= link_to '音楽', '/simples/category/6', class: "subtitle" %>
           </h3>
           <div class='item-price'>
          
